<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Play_signup</string>
    <string name="country_prompt">Choose a country</string>
    <string name="welcome_to_player_dost">Welcome to Player Dost</string>
    <string name="enrollment_no">enrollment_no</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="new_to_player_dosth">new to player dosth</string>
    <string name="signup">signup</string>
    <string name="about">about</string>
    <string name="find_a_player">FIND A PLAYER</string>
    <string name="edit_profile">Edit profile</string>
    <string name="form_a_team">Form a TEAM</string>
    <string name="organise_an_event">organise an event</string>
    <string name="schedule_today">Schedule today</string>
    <string name="what_s_today">what\'s today</string>
    <string name="rate_a_player">rate a player</string>
    <string name="signup1">SIGNUP 0</string>
    <string name="enrollment1">Enrollment No.</string>
    <string name="password1">Password</string>
    <string name="email_optional">Email (optional)</string>
    <string name="signup2">signup 1</string>
    <string name="signup_0">SIGNUP</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_branch">Enter Branch</string>
    <string name="facebook_id">Facebook id</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="complete_profole">COMPLETE PROFOLE</string>
    <string name="next">next</string>
    <string name="click_next_to_select_indoor_games">Click next to select Indoor games</string>
    <string name="basketball">Basketball</string>
    <string name="kabbadi">Kabbadi</string>
    <string name="tennis">Tennis</string>
    <string name="hockey">Hockey</string>
    <string name="football">Football</string>
    <string name="cricket">Cricket</string>
    <string name="which_outdoor_games_you_play">Which Outdoor games you play ?</string>
    <string name="carrom">Carrom</string>
    <string name="which_indoor_games_you_play">Which Indoor games you play ?</string>
    <string name="snooker">Snooker</string>
    <string name="tennis_table">Tennis Table</string>
    <string name="chess">Chess</string>
    <string name="volleyball">Volleyball</string>
    <string name="swimming">Swimming</string>
    <string name="badminton">Badminton</string>
    <string name="skating">Skating</string>
    <string name="click_next_to_select_other_hobbies">Click next to select other Hobbies</string>
    <string name="next1">next</string>
    <string name="dance">Dance</string>
    <string name="what_are_your_other_hobbies">What are your other hobbies?</string>
    <string name="fine_arts">Fine arts</string>
    <string name="music_related">Music related</string>
    <string name="trecking">Trecking</string>
    <string name="travelling">Travelling</string>
    <string name="water_games">Water games</string>
    <string name="computer_games">Computer games</string>
    <string name="athlets">Athlets</string>
    <string name="other">Other</string>
    <string name="ok">ok</string>
    <string name="button_add">Button</string>
    <string name="adddata">adddata</string>
    <string name="add_data">add data</string>
    <string name="add_your_interests">add your interests</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="todo">TODO</string>
    <string name="logout">logout</string>
    <string name="emailid">Emailid</string>
    <string name="email_id">Email Id</string>
    <string name="programme_ex_btech_1st_year">programme (Ex. btech 1st year)</string>
    <string name="programme_ex_b_tech_1st_year">Programme_Ex(Btech 1st year)</string>
    <string name="choose_a_sport_to_find">Choose a Sport to Find</string>
    <string name="outdoor_games">OUTDOOR GAMES</string>
    <string name="cricketFind">cricket</string>
    <string name="footballFind">football</string>
    <string name="travellingFind">travelling</string>
    <string name="computer_gamesFind">computer games</string>
    <string name="treckingFind">trecking</string>
    <string name="finearts">finearts</string>
    <string name="danceFind">dance</string>
    <string name="basketballFind">basketball</string>
    <string name="swimmingFind">swimming</string>
    <string name="hockeyFind">hockey</string>
    <string name="kabaddiFind">kabaddi</string>
    <string name="indoor_games">INDOOR GAMES</string>
    <string name="carromFind">carrom</string>
    <string name="tabletennis">tabletennis</string>
    <string name="snookerFind">snooker</string>
    <string name="volleyballFind">volleyball</string>
    <string name="badmintonFind">badminton</string>
    <string name="all_other_hobbies">ALL OTHER HOBBIES</string>
    <string name="skatingFind">skating</string>
    <string name="chessFind">chess</string>
    <string name="musicFind">music</string>
    <string name="athleticsFind">athletics</string>
    <string name="watergamesFind">watergames</string>
    <string name="textview_1">TextView 1</string>
    <string name="textview_2">TextView 2</string>
    <string name="textview_3">TextView 3</string>
    <string name="textview_4">TextView 4</string>
    <string name="textview_5">TextView 5</string>
</resources><!--"Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="player_dosth">PLAYER DOSTH</string>
</resources>
-->