<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/which_outdoor_games_you_play"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColor="#9400d3"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/cricket"
        android:layout_marginTop="10dp"
        android:id="@+id/checkbox1"
        android:background="#dda0dd"
        android:textColor="#ff8c00"
        android:textSize="20sp"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/football"
        android:layout_marginTop="10dp"
        android:id="@+id/checkbox2"
        android:background="#dda0dd"
        android:textColor="#ff8c00"
        android:textSize="20sp"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/hockey"
        android:layout_marginTop="10dp"
        android:id="@+id/checkbox3"
        android:background="#dda0dd"
        android:textColor="#ff8c00"
        android:textSize="20sp"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/tennis"
        android:layout_marginTop="10dp"
        android:id="@+id/checkbox4"
        android:background="#dda0dd"
        android:textColor="#ff8c00"
        android:textSize="20sp"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/kabbadi"
        android:layout_marginTop="10dp"
        android:id="@+id/checkbox5"
        android:background="#dda0dd"
        android:textColor="#ff8c00"
        android:textSize="20sp"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/basketball"
        android:layout_marginTop="10dp"
        android:id="@+id/checkbox6"
        android:background="#dda0dd"
        android:textColor="#ff8c00"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/click_next_to_select_indoor_games"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#9400d3"/>

    <Button
        android:id="@+id/button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/next" />
</LinearLayout>

