<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.play_signup.signup4"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_are_your_other_hobbies"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#9400d3"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/dance"
        android:layout_marginTop="5dp"
        android:id="@+id/checkbox1"
        android:background="#dda0dd"
        android:textColor="#000080"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/fine_arts"
        android:layout_marginTop="5dp"
        android:id="@+id/checkbox2"
        android:background="#dda0dd"
        android:textColor="#000080"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/music_related"
        android:layout_marginTop="5dp"
        android:id="@+id/checkbox3"
        android:background="#dda0dd"
        android:textColor="#000080"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/skating"
        android:layout_marginTop="5dp"
        android:id="@+id/checkbox4"
        android:background="#dda0dd"
        android:textColor="#000080"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/trecking"
        android:layout_marginTop="5dp"
        android:id="@+id/checkbox5"
        android:background="#dda0dd"
        android:textColor="#000080"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/travelling"
        android:layout_marginTop="5dp"
        android:id="@+id/checkbox6"
        android:background="#dda0dd"
        android:textColor="#000080"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/water_games"
        android:layout_marginTop="5dp"
        android:id="@+id/checkbox7"
        android:background="#dda0dd"
        android:textColor="#000080"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/computer_games"
        android:layout_marginTop="5dp"
        android:id="@+id/checkbox8"
        android:background="#dda0dd"
        android:textColor="#000080"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/athlets"
        android:layout_marginTop="5dp"
        android:id="@+id/checkbox9"
        android:background="#dda0dd"
        android:textColor="#000080"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/other"
        android:layout_marginTop="5dp"
        android:id="@+id/checkbox10"
        android:background="#dda0dd"
        android:textColor="#000080"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:onClick="signupbuttonAct"
        android:text="@string/ok" />
</LinearLayout>
