<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.play_signup.completeProfile"
    android:orientation="vertical"
    android:background="#20b2aa">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/complete_profile"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#9400d3"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_your_name"
        android:id="@+id/name"
        />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_mobile_number"
        android:inputType="number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_branch"
        android:id="@+id/Branch"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:hint="@string/facebook_id"
        android:id="@+id/fb_id"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/programme_ex_b_tech_1st_year"
        android:id="@+id/btechPro"
        />

    <Button
        android:id="@+id/button_Add"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="#ff0000"
        android:text="@string/add_data" />

</LinearLayout>
