<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.hp.play_signup.signup"
    android:background="#ffa500"

    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        android:src="@drawable/signhelp" android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/signup_0"
            android:textColor="#000"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"/>

    <EditText
        android:id="@+id/mail"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:hint="@string/emailid"
        android:inputType="textEmailAddress"
        android:textColor="#000" />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:hint="@string/password1"
                android:textColor="#000"
                android:id="@+id/password"
                android:inputType="textPassword"/>

    <Button
        android:id="@+id/button_Next"
        android:layout_width="120dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#ff0000"
        android:text="@string/next" />
</LinearLayout>