<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.play_signup.gamesShower"
    android:orientation="horizontal"
    android:weightSum="100">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/textview1"
        android:gravity="center"
        android:layout_weight="66.6"
        android:textColor="#000"
        android:text="@string/textview_1"
        android:textAlignment="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="33.3"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/textview_2"
            android:id="@+id/textview2"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/textview_3"
            android:id="@+id/textview3"
            android:layout_gravity="center"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/textview_4"
            android:id="@+id/textview4"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/textview_5"
            android:id="@+id/textview5"
            android:layout_gravity="center"

            />

    </LinearLayout>
</LinearLayout>

